Revert "CB-23717 Fix for testSDXMultiAzUpgrade because the production catalog contains wrong catalog entries"
This reverts commit c374553b669a4d635502fdd311b775bfad0248f3.